2002-07-09  Gary Houston  <ghouston@arglist.com>

	* docstring.el: defined caddr, used in several places but missing
	for some reason.

2002-04-02  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* doctring.el: List commands in commentary; nfc.

2002-03-15  Neil Jerram  <neil@ossau.uklinux.net>

	* guile.texi: Replaced by regenerated libguile version.

2002-03-12  Neil Jerram  <neil@ossau.uklinux.net>

	* guile.texi: Replaced by regenerated libguile version.

2002-03-08  Neil Jerram  <neil@ossau.uklinux.net>

	* docstring.el (docstring-libguile-directory,
	docstring-display-location, docstring-show-source): New.

2001-11-16  Neil Jerram  <neil@ossau.uklinux.net>

	* guile.texi: Replaced by regenerated libguile version.

	* docstring.el (make-module-description-list): Exclude @deffn's
	with category {C Function}.
	(docstring-process-alist): Bind key "d" to
	docstring-ediff-this-line in the docstring output buffer.

2001-11-13  Neil Jerram  <neil@ossau.uklinux.net>

	* guile.texi: Replaced by libguile version (after automatically
	updating docstrings in the reference manual).

2001-11-07  Neil Jerram  <neil@ossau.uklinux.net>

	* guile.texi: Replaced by libguile version (after automatically
	updating docstrings in the reference manual).

	* docstring.el (docstring-manual-directory): Added "/ref" to end.
	(docstring-manual-files): Now calculated automatically, since by
	definition all the .texi files in doc/ref are reference manual
	files.

2001-04-03  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* guile.texi: Automated docstring merging.

2001-03-23  Neil Jerram  <neil@ossau.uklinux.net>

	* ChangeLog, README, docstring.el, guile.texi: New files.
