@@ -1,3 +1,8 @@
+2002-07-10  Gary Houston  <ghouston@arglist.com>
+
+	* docstring.el: optional 2nd environment variable to locate
+	built files.
+
 2002-07-09  Gary Houston  <ghouston@arglist.com>
 
 	* docstring.el: defined caddr, used in several places but missing
